# reserva_app

./: README.md  pyproject.toml
CSV/: cadastro-sala.csv  cadastro-usuario.csv  reserva-sala.csv
reserva_app/: app.py  funcoes.py
reserva_app/templates/: cadastrar-sala.html  cadastro.html  listar-salas.html  reservar-sala.html
reserva_app/templates/reserva/: detalhe-reserva.html
