[tool.poetry]
name = "reserva-app"
version = "0.1.0"
description = ""
authors = ["MateusKekw <mendonca.mateus@aluno.ifsp.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
